--- a/blogs/templates/blogs/index.html
+++ b/blogs/templates/blogs/index.html
@@ -1,2 +1,19 @@
-<h1>ブログサイト</h1>
-<h2>ここはトップページです</h2>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>ブログ管理サイト</title>
+</head>
+<body>
+    <h1 style="text-align: center;">My Blog</h1>
+    <div style="width: 70%;margin: 0px auto;">
+        <hr />
+        {% for blog in blogs %}
+        <div>
+            <h3>{{ blog.title }}</h3>
+            <div>{{ blog.text | truncatechars:100 }}</div>
+        </div>
+        <hr />
+        {% endfor %}
+    </div>
+</body>
+</html>
