--- a/blogs/templates/blogs/index.html
+++ b/blogs/templates/blogs/index.html
@@ -11,6 +11,10 @@
         <div>
             <h3>{{ blog.title }}</h3>
             <div>{{ blog.text | truncatechars:100 }}</div>
+            <div style="text-align: right;">
+                <a href="{% url 'blogs:detail' blog_id=blog.id %}">記事を読む
+                </a>
+            </div>
         </div>
         <hr />
         {% endfor %}
