--- a/blogs/templates/blogs/detail.html
+++ b/blogs/templates/blogs/detail.html
@@ -6,8 +6,15 @@
 <body>
     <h1 style="text-align: center;">{{ blog.title }}</h1>
     <div style="width: 70%;margin: 0px auto;">
-        <div style="margin: 60px 20px;"></div>
-        {{ blog.text }}
+        <div style="margin: 60px 20px;">{{ blog.text }}</div>
+        <div style="text-align: center; margin-top: 50px;">
+            <form method="POST" action="{% url 'blogs:delete' blog.id %}">
+                {% csrf_token %}
+                <button class="btn" type="submit" onclick='return confirm("本当に削除しますか？");'>
+                    削除
+                </button>
+            </form>
+        </div>
     </div>
     <div style="text-align: center; margin-top: 50px;">
         <a href="{% url 'blogs:index' %}">トップページに戻る</a>
