--- a/blogs/templates/blogs/new.html
+++ b/blogs/templates/blogs/new.html
@@ -9,7 +9,7 @@
         <div style="margin: 60px 20px;">
             <form action="{% url 'blogs:new' %}" method="POST">{% csrf_token %}
                 {{ form.as_p }}
-                <button type~"submit" class="btn">保存</button>
+                <button type="submit" class="btn">保存</button>
             </form>
         </div>
         <div style="text-align: center; margin-top: 50px;">
